hphp/test/slow/reified_generics/error-function-call-9.php.expectf
Fatal error: Function f requires 1 generics but 2 given in %s on line 3
